--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
       "camelcase": "off",
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "_"
-      }]
+      }],
+      "no-useless-constructor": "off"
     },
     "settings": {
       "import/resolver": {
