--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/mongodb": "^3.6.3",
     "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.3.2",
